Add HTML AOT diagnostics report